<?xml version="1.0"?>
<package format="2">
  <name>executive_smach</name>
  <version>2.0.1</version>
  <description>
    This metapackage depends on the SMACH library and ROS SMACH integration
    packages.
  </description>
  <maintainer email="gm130s@gmail.com">Isaac I. Y. Saito</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/smach</url>
  <author>Jonathan Bohren</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>smach_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
