<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>executive_smach</name>
  <version>3.0.3</version>
  <description>
    This metapackage depends on the SMACH library and ROS SMACH integration
    packages.
  </description>
  <maintainer email="iisaac.saito@gmail.com">Isaac Saito</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/smach</url>
  <author>Jonathan Bohren</author>
  <author>Wim Meeussen</author>
  <author>Charles Lesire</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>smach</exec_depend>
  <exec_depend>smach_msgs</exec_depend>
  <exec_depend>smach_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
