<?xml version="1.0"?>
<package>
  <name>smach_msgs</name>
  <version>2.0.0</version>
  <description>
    this package contains a set of messages that are used by the introspection
    interfaces for smach.  
  </description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <license>BSD</license>

  <author>Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="rosdoc.yaml"/>    
  </export>
</package>

