<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smach_msgs</name>
  <version>3.0.3</version>
  <description>
    this package contains a set of messages that are used by the introspection
    interfaces for smach.
  </description>

  <maintainer email="iisaac.saito@gmail.com">Isaac Saito</maintainer>
  <license>BSD</license>

  <author>Jonathan Bohren</author>
  <author>Charles Lesire</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_cppcheck</buildtool_depend>
  <!-- ament_cmake_{flake8, pep257} are added to workaround https://github.com/ros2/rosidl_python/issues/198 -->
  <buildtool_depend>ament_cmake_flake8</buildtool_depend>
  <buildtool_depend>ament_cmake_pep257</buildtool_depend>  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_lint</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>  
</package>
