<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smach_ros</name>
  <version>2.0.1</version>
  <description>
    The smach_ros package contains extensions for the SMACH library to
    integrate it tightly with ROS.  For example, SMACH-ROS can call
    ROS services, listen to ROS topics, and integrate
    with <a href="http://www.ros.org/wiki/actionlib">actionlib</a>
    both as a client, and a provider of action servers.  SMACH is a
    new library that takes advantage of very old concepts in order to
    quickly create robust robot behavior with maintainable and modular
    code.
  </description>

  <maintainer email="gm130s@gmail.com">Isaac I. Y. Saito</maintainer>
  <license>BSD</license>

  <author>Jonathan Bohren</author>
  <author>Charles Lesire</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
